--- a/main.css
+++ b/main.css
@@ -90,7 +90,6 @@ ol li {
     text-transform: uppercase;
     margin: 0 600px;
     font-weight: bold;
-    max-width: 1024px;
 }
 
 li {
@@ -98,6 +97,7 @@ li {
     text-align: center;
     max-height: 230px;
     cursor: pointer;
+    display: inline;
 }
 
 li.completed {
